--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@notadd/ng-material2": "0.0.8",
     "@notadd/ngx-xlsx": "^1.0.1",
     "@types/html2canvas": "0.0.35",
-    "angular6-json-schema-form": "^7.0.2",
+    "@types/lodash-es": "^4.17.3",
+    "angular6-json-schema-form": "^7.1.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.12",
@@ -55,6 +56,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
+    "lodash-es": "^4.17.11",
     "ngforage": "^4.0.1",
     "ngx-amap": "^2.2.0",
     "ngx-captcha": "^6.2.1",
@@ -62,7 +64,7 @@
     "ngx-permissions": "^6.0.4",
     "perfect-scrollbar": "^1.4.0",
     "rxjs": "^6.3.3",
-    "screenfull": "^4.0.0",
+    "screenfull": "^4.2.0",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
     "xlsx": "^0.14.1",
@@ -96,6 +98,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.12.1",
-    "typescript": "^3.2.2"
+    "typescript": "3.2.4"
   }
 }
